Fixed policy closing alignment

--- a/styles.css
+++ b/styles.css
@@ -280,14 +280,15 @@ p {
 
 /* POLICY CLOSING */
 .policy-closing {
-  text-align: center;
+  text-align: left;
   max-width: 700px;
   margin: 0 auto;
 }
 
 .policy-closing h2 {
-  border-left: none;
-  text-align: center;
+  border-left: 5px solid #c9a87c;
+  padding-left: 15px;
+  text-align: left;
   margin-bottom: 20px;
 }
 
